Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.14.1
-
Pyarrow v0.14.1, manylinux1
Description
Trying to write a zero-RecordBatch file to parquet:
import pyarrow import pyarrow.parquet table = pyarrow.Table.from_batches([], pyarrow.schema([('A', pyarrow.dictionary(pyarrow.int32(), pyarrow.string()))])) pyarrow.parquet.write_table(table, 'x.parquet')
... I receive an error and Python exits with exit code 139:
WARNING: Logging before InitGoogleLogging() is written to STDERR F0915 18:37:23.099939 1 table.cc:64] Check failed: (chunks.size()) > (0) cannot construct ChunkedArray from empty vector and omitted type *** Check failure stack trace: ***
Attachments
Issue Links
- links to