ARROW-6568: [C++] Pass type argument to ChunkedArray constructor when chunks may be empty